# fastapi-springboot-app

./: .env  app.db  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/models/: user.py
app/routers/: hello.py  users.py
app/services/: user_service.py
app/templates/: index.html
static/: .gitkeep
